--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 <div class="content">
   <blockquote class="mainquote baroque">
     A prece é a conversação espiritual essencial da alma com o seu Criador, direta e sem intermediação. É o alimento espiritual que sustenta a vida do espírito. (...) Nas suas asas, a alma voa nos céus divinos e achega-se à realidade divina.
-    <footer class="mainquote">Escrituras bahá'ís</footer>
+    <footer class="mainitemquote">Escrituras bahá'ís</footer>
   </blockquote>
 
   <!-- Features -->
