--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -89,6 +89,11 @@ element {
 
   .navbar-header {
     background: #57729C;
+
+    img {
+      height: 70px;
+      margin-left: 20px;
+    }
   }
 
   #top-menu {
@@ -105,7 +110,7 @@ element {
       text-align: center;
 
       a {
-        padding: 15px 0;
+        padding: 25px 0;
         color: black;
 
         &:hover {
