--- a/app/views/home/_top_menu.html
+++ b/app/views/home/_top_menu.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"></a>
+      <img src="assets/logo-gold.png">
     </div>
 
     <div class="collapse navbar-collapse" id="collapsable">
